--- a/src/com/dematicket/form/FormExchangeRate.form
+++ b/src/com/dematicket/form/FormExchangeRate.form
@@ -120,6 +120,7 @@
         <Component class="javax.swing.JTextField" name="exchangeRateBuy">
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="exchangeRateBuyActionPerformed"/>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="exchangeRateBuyKeyTyped"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnOKPassChange">
@@ -134,6 +135,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="exchangeRateSell">
+          <Events>
+            <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="exchangeRateSellKeyTyped"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Properties>
